fix collapse list

--- a/src/components/collapse-list.module.scss
+++ b/src/components/collapse-list.module.scss
@@ -28,12 +28,12 @@
       padding: 30px 20px;
       display: grid;
       gap: 30px 20px;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 
       @media screen and (max-width: 500px) {
         grid-template-columns: 1fr;
       }
-      
+
       .item-list-child {
         h5 {
           font-size: 0.9rem;
